5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1708_3062.log
== TEST (2019-04-29 14:15:22) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
elif(c<1)or(c>10):
	print("Entradada invalida")
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:15:35) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
elif(c<1)or(c>10):
	print("Entradada invalida")
-- EXECUTION TIME:
0.210139
-- ERROR:
  File "/home/codebench/codes/1708/3062/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:15:38) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
elif(c<1)or(c>10):
	print("Entradada invalida")
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:18:04) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
if(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
if(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
if(c<1)or(c>10):
	print("Entradada invalida")
-- EXECUTION TIME:
0.190247
-- ERROR:
  File "/home/codebench/codes/1708/3062/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:11) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
if(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
if(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
if(c<1)or(c>10):
	print("Entradada invalida")
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:33:41) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
if(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
if(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
if(c<1)or(c>10):
	print("Entradada invalida")
-- EXECUTION TIME:
0.184565
-- ERROR:
  File "/home/codebench/codes/1708/3062/main.py", line 6
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:23) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	else:
		print("PO insuficiente")
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	else:
		print("PO insuficiente")
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	else:
		print("PO insuficiente")
elif(c<1)or(c>10):
	print("Entradada invalida")
-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:35:52) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entradada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.155474
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:35:53) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entradada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:18) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entradada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:34) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entradada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:57) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entradada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:18) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.270305
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:20) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:22) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.160732
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:45) 
-- CODE:
a=float(input("peÇas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.224828
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:48) 
-- CODE:
a=float(input("peças de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.152063
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:38:32) 
-- CODE:
a=int(input("peças de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.181416
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:38:49) 
-- CODE:
a=float(input("peças de ouro: "))
b=input("arma: ")
c=float(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.164084
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3062/main.py", line 1, in <module>
    a=float(input("pe\xe7as de ouro: "))
UnicodeEncodeError: 'ascii' codec can't encode character '\xe7' in position 2: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:00) 
-- CODE:
a=float(input("peças de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:07) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:42) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:39:59) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.211737
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:09) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:40:27) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.193508
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:41:01) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.134876
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:41:05) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("po insuficiente")
-- EXECUTION TIME:
0.173971
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
po insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
po insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:19) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:44) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:42:17) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print(int("PO insuficiente"))
-- EXECUTION TIME:
0.199126
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:17) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print(int("PO insuficiente"))
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:42:30) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print(float("PO insuficiente"))
-- EXECUTION TIME:
0.13523
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:50) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:42:54) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.134909
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:45:50) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
elif(c<1)or(c>10):
	print("Entrada invalida")
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.178314
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:48:28) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(c<1)or(c>10):
	print("Entrada invalida")
elif(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.141311
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:49:16) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(c<1)or(c>10):
	print("Entrada invalida")
elif(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:53:55) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(c<1)or(c>10):
	print("Entrada invalida")
elif(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
else:
	print("PO insuficiente")
-- EXECUTION TIME:
0.22801
-- TEST CASE 1:
---- input:
100
ESPADA
9
---- correct output:
90
---- user output:
90
-- TEST CASE 2:
---- input:
200
FAQUINHA
2
---- correct output:
Entrada invalida
---- user output:
PO insuficiente
-- TEST CASE 3:
---- input:
13
MARRETA
2
---- correct output:
PO insuficiente
---- user output:
PO insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:53:56) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(c<1)or(c>10):
	print("Entrada invalida")
elif(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:54:14) 
-- CODE:
a=float(input("pecas de ouro: "))
b=input("arma: ")
c=int(input("fator de sucesso: "))
if(c<1)or(c>10):
	print("Entrada invalida")
elif(a>=100)and(b=="ESPADA"):
	print(c*10)
	
elif(a>=50)and(b=="MARRETA"):
	print(c+5)
	
elif(a>=30)and(b=="MACHADO"):
	print(c+3)
	
else:
	print("PO insuficiente")
-- OUTPUT:
90
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
